# sorrow

./: .gitignore  :w  Cargo.toml  Makefile  README.md  rust-toolchain.toml  temp.font  x86_64.json
.cargo/: config.toml
boot/: Cargo.toml
boot/src/: main.rs
crates/: Cargo.toml
fonts/: 6x6.txt  8x6.psf
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: device.rs  gdt.rs  idt.rs  main.rs  terminal.rs
kernel/src/graphics/: color.rs  font.rs  gop.rs  mod.rs
kernel/src/mem/: alloc.rs  error.rs  heap.rs  mod.rs
src/: ;  gdt.rs  interrupts.rs  io.rs  lib.rs  main.rs  memory.rs  process.rs  util.rs  vga.rs
src/allocator/: linked_list.rs  mod.rs
src/devices/: keyboard.rs
src/graphics/: font.rs  gop.rs  mod.rs  vga.rs
src/graphics/gop/: buffer.rs  mod.rs  writer.rs
src/kernel/: gdt.rs  interrupts.rs  io.rs  lib.rs  main.rs  memory.rs
src/kernel/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs  mod.rs
src/kernel/devices/: keyboard.rs
src/kernel/graphics/: font.rs
src/kernel/graphics/gop/: buffer.rs  writer.rs
src/kernel/storage/: minixfs.rs  mod.rs
src/kernel/storage/ext2/: mod.rs
src/kernel/task/: executor.rs  mod.rs
src/storage/: disk.rs  drive.rs  mod.rs  path_parser.rs
src/storage/ext2/: mod.rs
src/task/: executor.rs  keyboard.rs  mod.rs
src/vga/: mod.rs
tests/: basic_boot.rs  should_panic.rs
