[package]
name = "sorrow"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "os-qemu"
path = "boot/main.rs"

[workspace]
members = ["kernel"]

[build-dependencies]
bootloader = "0.11" 
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }

# [build-dependencies.kernel]
# path = "kernel"
# artifact = "bin"
# target = "x86_64-unknown-none"

[dependencies]
# used for UEFI booting in QEMU
ovmf-prebuilt = "0.1.0-alpha.1"

# [profile.dev]
# panic = "abort"

# [profile.release]
# opt-level = "s"
# strip = "debuginfo"
# lto = "thin"
# panic = "abort"
