[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader_api = "0.11.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
linked_list_allocator = "0.10.4"
rusttype = { version = "0.9.3", default-features = false, features = ["libm-math"] }
spin = "0.9.5"
thiserror = { git = "https://github.com/xiuxiu62/thiserror-core", default-features = false }
x86_64 = "0.14.10"
